<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/gridView1"
    android:numColumns="3"
    tools:context=".MyActivity">

    <Button
      android:id="@+id/boton1"
        android:layout_width=""
        android:text="@string/boton1"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/boton2"
        android:layout_width="wrap_content"
        android:text="@string/boton2"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/boton3"
        android:layout_width="wrap_content"
        android:text="@string/boton3"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/boton4"
        android:layout_width="wrap_content"
        android:text="@string/boton4"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/boton5"
        android:layout_width="wrap_content"
        android:text="@string/boton5"
        android:layout_height="wrap_content"/>




</GridLayout>
